# django-teaser-project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Django_one/: config.json
mysite/: admin.py  models.py  settings.py  urls.py  views.py
mysite/migrations/: 0001_initial.py
mysite/static/: style.css
mysite/templates/: about.html  contact.html  home.html  profile.html  services.html
tests/: test_basic.py
