[tool.poetry]
name = "django-teaser-project"
version = "0.1.0"
description = "Учебный веб-проект на Django с интерактивными тизерами и логированием"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.2.5"
pillow = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
